add: email, password validation

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODB="mongodb://NikhilT27:SBPP4cSuJlfQeBCW@cluster0-shard-00-00.ugwdh.mongodb.net:27017,cluster0-shard-00-01.ugwdh.mongodb.net:27017,cluster0-shard-00-02.ugwdh.mongodb.net:27017/<dbname>?ssl=true&replicaSet=atlas-gr4nnw-shard-0&authSource=admin&retryWrites=true&w=majority"
+MONGODB="mongodb://NikhilT27:SBPP4cSuJlfQeBCW@cluster0-shard-00-00.ugwdh.mongodb.net:27017,cluster0-shard-00-01.ugwdh.mongodb.net:27017,cluster0-shard-00-02.ugwdh.mongodb.net:27017/InvoiceTrackerDB?ssl=true&replicaSet=atlas-gr4nnw-shard-0&authSource=admin&retryWrites=true&w=majority",
+
+SECRET_KEY="Secret key for token generation"
