add: Invoice Approval flow apis, aprroveInvoice and rejectInvoice

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGODB="mongodb://NikhilT27:SBPP4cSuJlfQeBCW@cluster0-shard-00-00.ugwdh.mongodb.net:27017,cluster0-shard-00-01.ugwdh.mongodb.net:27017,cluster0-shard-00-02.ugwdh.mongodb.net:27017/InvoiceTrackerDB?ssl=true&replicaSet=atlas-gr4nnw-shard-0&authSource=admin&w=majority&retryWrites=true",
 
-SECRET_KEY="Secret key for token generation"
+SECRET_KEY="Secret key for token generation",
+
+ADMIN = "admin@gmail.com"
