--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "netlify-cli": "^2.69.11"
   }
 }
