--- a/netlify.toml
+++ b/netlify.toml
@@ -3,4 +3,10 @@
   publish = "/build"
   command = "npm build"
 
-  
+[[redirects]]
+  from = "/"
+  to = "https://invoice-tracker-27.herokuapp.com"
+  status = 200
+  force = true # COMMENT: ensure that we always redirect
+  headers = {X-From = "Netlify"}
+  signed = "API_SIGNATURE_TOKEN"
